<?xml version="1.0"?>
<package format="2">
  <name>my_control</name>
  <version>0.0.1</version>
  <description>The my_control package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>mav_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>